yamls/nginx-agic-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-agic
  namespace: test-app
  labels:
    app: nginx-agic
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx-agic
